# server

./: .gitignore  .pre-commit-config.yaml  functional_tests.py  pyproject.toml  setup.cfg
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_post_project.py
blog/templates/: blog_category.html  blog_detail.html  blog_index.html
deploy_tools/: fabfile.py  gunicorn-systemd.template.service  provisioning_notes.md
functional_tests/: base.py  test_layout_and_styling.py  test_list_item_validation.py  test_simple_list_creation.py  tests.py
lists/: forms.py  models.py  tests.py  todo.txt  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_alter_item_options_alter_item_unique_together.py  0002_item_text.py
lists/static/: list.js
lists/static/tests/: qunit-2.19.1.js  tests.html
lists/templates/: base.html  home.html  list.html  lists_base.html
lists/tests/: test_all.py  test_forms.py  test_models.py  test_views.py
media/: cii  cii2  server  th-1073315614
projects/: admin.py  models.py  test_cii.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py
projects/templates/: project_detail.html  projects_index.html
server/: settings.py  urls.py
templates/: base.html
